k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ld-stadt-zuerich-ch
spec:
  template:
    spec:
      enableServiceLinks: false

      containers:
        - name: varnish
          image: docker.io/zazuko/varnish-post:v1.0.3
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /health
              port: http

          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /health
              port: http

        - name: ld-stadt-zuerich-ch
          image: registry.zazuko.com/docker/ld.stadt-zuerich.ch
          imagePullPolicy: Always

          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 65534
            runAsGroup: 65534

          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /health
              port: 8080

          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /health
              port: 8080

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels: {}
              topologyKey: kubernetes.io/hostname
