k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ld-stadt-zuerich-ch
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: ld-stadt-zuerich-ch.zazuko.net
spec:
  tls:
    - secretName: ld-stadt-zuerich-ch-cert
      hosts:
        - ld.stadt-zuerich.ch
  rules:
    - host: ld.stadt-zuerich.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ld-stadt-zuerich-ch
                port:
                  name: http
